<?xml version="1.0"?>
<package format="3">
  <name>flexiv_spacemouse_teleop</name>
  <version>0.1.0</version>
  <description>SpaceMouse teleoperation bridge for Flexiv Rizon with MoveIt Servo.</description>
  <maintainer email="181958768+ZihaoLu001@users.noreply.github.com">Zihao Lu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>flexiv_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>spacenav</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
